syntax = "proto3";

package SERVER;

service VoucherService {
  rpc FindVoucherById (VoucherId) returns (Voucher);
}

message VoucherId{
  int32 id = 1;
}

message Voucher {
  int32 id = 1;
  string code = 2;
  bool isUsed = 3;
  string endDate = 4;
  int32 discount = 5;
  DiscountType discountType = 6;
  int32 minAmount = 7;
  string couponStripeId = 8;
}

enum DiscountType {
  PERCENTAGE = 0;
  FIXED = 1;
}